--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand" href="https://clarksongonzales.github.io/WebsiteProposal/">VISIT OUR WEBSITE PROPOSAL</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -243,12 +243,12 @@
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
-                        <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                        <h3>EMAIL</h3>
+                        <p>CLARK SON C. GONZALES
+                            <br>gonzalesclarkson@gmail.com</p>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>Around the Web</h3>
+                        <h3>FOLLOW MY ACCOUNTS</h3>
                         <ul class="list-inline">
                             <li>
                                 <a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
@@ -268,8 +268,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>THANKS TO:</h3>
+                        <p>Mr. Francis Prim Reyes</p>
                     </div>
                 </div>
             </div>
@@ -278,7 +278,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Your Website 2016
+                        Copyright &copy; My Porfolio 2016
                     </div>
                 </div>
             </div>
