--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>MY PORFOLIO</title>
+    <title>Clark Son Gonzales</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="https://clarksongonzales.github.io/WebsiteProposal/">VISIT OUR WEBSITE PROPOSAL</a>
+                <a class="navbar-brand" href="#">HOME</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -54,10 +54,10 @@
                         <a href="#portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">About</a>
+                        <a href="#resume">Resume</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#contact">Contact</a>
+                        <a href="#Website">Website</a>
                     </li>
                 </ul>
             </div>
@@ -156,38 +156,37 @@
         </div>
     </section>
 
-    <!-- About Section -->
-    <section class="success" id="about">
+    <!-- Resume Section -->
+    <section class="success" id="Resume">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>About</h2>
+                    <h2>Resume</h2>
                     <hr class="star-light">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Baguio City Philippines</p>
+                    <p>Clark Son C. Gonzales</p>
                 </div>
                 <div class="col-lg-4">
-                    <p>Loakan, Atok Trail</p>
-					<p>Baguio, City</p>
+                    <p>Bachelor Of Information Technology</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://clarksongonzales.github.io/WebsiteProposal/" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> VISIT OUR WEBSITE PROPOSAL
+                        <i class="fa fa-download"></i> VISIT MY RESUME
                     </a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
+    <!-- Website Section -->
+    <section id="Website">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Contact Me</h2>
+                    <h2>My Website</h2>
                     <hr class="star-primary">
                 </div>
             </div>
