--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Portfolio</a>
+                        <a href="#Portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#resume">Resume</a>
@@ -182,11 +182,11 @@
     </section>
 
     <!-- Website Section -->
-    <section class="success" id="Resume">
+    <section class="success" id="Resume" background-color:white>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Resume</h2>
+                    <h2>Website Proposal</h2>
                     <hr class="star-light">
                 </div>
             </div>
@@ -199,7 +199,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://clarksongonzales.github.io/WebsiteProposal/" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> VISIT MY RESUME
+                        <i class="fa fa-download"></i> VISIT MY Website
                     </a>
                 </div>
             </div>
