--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         <a href="#Portfolio">Portfolio</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#resume">Resume</a>
+                        <a href="#Resume">Resume</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#Website">Website</a>
@@ -83,7 +83,7 @@
     </header>
 
     <!-- Portfolio Grid Section -->
-    <section id="portfolio">
+    <section id="Portfolio">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -166,11 +166,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Clark Son C. Gonzales</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Bachelor Of Information Technology</p>
+                <div class="col-lg-12 text-center">
+                    <p>Taking a Degree of Bachelor Of Information Technology</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://clarksongonzales.github.io/WebsiteProposal/" class="btn btn-lg btn-outline">
@@ -182,7 +179,7 @@
     </section>
 
     <!-- Website Section -->
-    <section class="success" id="Resume" background-color:white>
+    <section class="success" id="Resume" >
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -191,11 +188,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
-                    <p>Clark Son C. Gonzales</p>
-                </div>
-                <div class="col-lg-4">
-                    <p>Bachelor Of Information Technology</p>
+                <div class="col-lg-12 text-center">
+                    <p>Uc Canteen</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="https://clarksongonzales.github.io/WebsiteProposal/" class="btn btn-lg btn-outline">
