--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                     <p>Taking a Degree of Bachelor Of Information Technology</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="https://clarksongonzales.github.io/WebsiteProposal/" class="btn btn-lg btn-outline">
+                    <a href="https://clarksongonzales.github.io/Resume/" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> VISIT MY RESUME
                     </a>
                 </div>
