--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/profile.png" alt="" width="400" height="400">
                     <div class="intro-text">
                         <span class="name">CLARK SON C. GONZALES</span>
                         <hr class="star-light">
