--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     </section>
 
     <!-- Website Section -->
-    <section class="success" id="Resume" >
+    <section class="success" id="Website" >
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
