--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/reyes.jpg" class="img-responsive" alt="">
+                        <img src="img/reyes.jpg" class="img-responsive" alt="" width="400" height="350">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
