--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/paloao.jpg" class="img-responsive" alt="">
+                        <img src="img/paloao.jpg" class="img-responsive" alt="" width="350" height="350">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -119,7 +119,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/quitaleg.jpg" class="img-responsive" alt="">
+                        <img src="img/quitaleg.jpg" class="img-responsive" alt="" width="350" height="350">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -129,7 +129,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/ortiz.jpg" class="img-responsive" alt="">
+                        <img src="img/conception.jpg" class="img-responsive" alt="" width="350" height="350">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -139,7 +139,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/conception" class="img-responsive" alt="">
+                        <img src="img/paloao.jpg" class="img-responsive" alt="" width="350" height="350" >
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -149,8 +149,8 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/paloao.jpg" class="img-responsive" alt="">
-                    </a>
+                        <img src="img/ortiz.jpg" class="img-responsive" alt="" width="350" height="350"> 
+                    </a> 
                 </div>
             </div>
         </div>
