--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                         <span class="name">CLARK SON C. GONZALES</span>
                         <hr class="star-light">
                         <span class="skills">Your I.T Professional</span>
+                        <hr class="star-primary">
                     </div>
                 </div>
             </div>
@@ -87,7 +88,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Portfolio</h2>
+                    <h2>INSTRUCTORS</h2>
                     <hr class="star-primary">
                 </div>
             </div>
@@ -167,6 +168,7 @@
                     <a href="https://clarksongonzales.github.io/Resume/" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> VISIT MY RESUME
                     </a>
+                    <hr class="star-primary">
                 </div>
             </div>
         </div>
@@ -189,6 +191,7 @@
                     <a href="https://clarksongonzales.github.io/WebsiteProposal/" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> VISIT MY Website
                     </a>
+                    <hr class="star-primary">
                 </div>
             </div>
         </div>
