--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <span class="name">CLARK SON C. GONZALES</span>
                         <hr class="star-light">
                         <span class="skills">Your I.T Professional</span>
-                        <hr class="star-primary">
+                        <hr class="star-light">
                     </div>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                     <a href="https://clarksongonzales.github.io/Resume/" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> VISIT MY RESUME
                     </a>
-                    <hr class="star-primary">
+                    <hr class="star-light">
                 </div>
             </div>
         </div>
@@ -191,7 +191,7 @@
                     <a href="https://clarksongonzales.github.io/WebsiteProposal/" class="btn btn-lg btn-outline">
                         <i class="fa fa-download"></i> VISIT MY Website
                     </a>
-                    <hr class="star-primary">
+                    <hr class="star-light">
                 </div>
             </div>
         </div>
@@ -230,6 +230,7 @@
                     <div class="footer-col col-md-4">
                         <h3>THANKS TO:</h3>
                         <p>Mr. Francis Prim Reyes</p>
+                        <hr class="star-light">
                     </div>
                 </div>
             </div>
