--- a/index.html
+++ b/index.html
@@ -95,55 +95,37 @@
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                            </div>
-                        </div>
+                        <div class="caption"> </div>
                         <img src="img/reyes.jpg" class="img-responsive" alt="" width="250" height="250">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                            </div>
-                        </div>
+                        <div class="caption"> </div>
                         <img src="img/paloao.jpg" class="img-responsive" alt="" width="250" height="250">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                            </div>
-                        </div>
+                        <div class="caption"> </div>
                         <img src="img/quitaleg.jpg" class="img-responsive" alt="" width="250" height="250">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                            </div>
-                        </div>
+                        <div class="caption"> </div>
                         <img src="img/paloao.jpg" class="img-responsive" alt="" width="250" height="250" >
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                            </div>
-                        </div>
+                        <div class="caption"> </div>
                         <img src="img/conception.jpg" class="img-responsive" alt="" width="250" height="250" >
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                            </div>
-                        </div>
+                        <div class="caption"> </div>
                         <img src="img/ortiz.jpg" class="img-responsive" alt="" width="250" height="250"> 
                     </a> 
                 </div>
@@ -363,7 +345,6 @@
                                     <strong><a href="">August to December 2016</a>
                                     </strong>
                                 </li>
-                                </li>
                             </ul>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
@@ -423,6 +404,7 @@
                                     </strong>
                                 </li>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            </ul>
                         </div>
                     </div>
                 </div>
