--- a/index.html
+++ b/index.html
@@ -112,6 +112,32 @@
                     </a>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2>INSTRUCTORS</h2>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="caption"> </div>
+                        <img src="img/reyes.jpg" class="img-responsive" alt="" width="250" height="250">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="caption"> </div>
+                        <img src="img/paloao.jpg" class="img-responsive" alt="" width="250" height="250">
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="caption"> </div>
+                        <img src="img/quitaleg.jpg" class="img-responsive" alt="" width="250" height="250">
+                    </a>
+                </div>
+            </div>
         </div>
     </section>
 
