--- a/index.html
+++ b/index.html
@@ -113,9 +113,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>INSTRUCTORS</h2>
-                    <hr class="star-primary">
+                <div class="col-lg-12">
                 </div>
             </div>
             <div class="row">
