--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 portfolio-item">WEB DEVELOPMENT
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption"> </div>
                         <img src="img/reyes.jpg" class="img-responsive" alt="" width="250" height="250">
@@ -113,24 +113,20 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
-                </div>
-            </div>
-            <div class="row">
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption"> </div>
                         <img src="img/reyes.jpg" class="img-responsive" alt="" width="250" height="250">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="caption"> </div>
                         <img src="img/paloao.jpg" class="img-responsive" alt="" width="250" height="250">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
                         <div class="caption"> </div>
                         <img src="img/quitaleg.jpg" class="img-responsive" alt="" width="250" height="250">
                     </a>
