--- a/index.html
+++ b/index.html
@@ -93,20 +93,20 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">WEB DEVELOPMENT
-                    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+                <div class="col-sm-4 portfolio-item  text-center"> <h3>WEB DEVELOPMENT</h3>
+                    <a href="#webdev" class="portfolio-link" data-toggle="modal">
                         <div class="caption"> </div>
                         <img src="img/reyes.jpg" class="img-responsive" alt="" width="250" height="250">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal2" class="portfolio-link" data-toggle="modal">
+                <div class="col-sm-4 portfolio-item  text-center"> <h3>SYSTEM ARCHITECTURE</h3>
+                    <a href="#systemarchi" class="portfolio-link" data-toggle="modal">
                         <div class="caption"> </div>
                         <img src="img/paloao.jpg" class="img-responsive" alt="" width="250" height="250">
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal3" class="portfolio-link" data-toggle="modal">
+                <div class="col-sm-4 portfolio-item  text-center"> <h3>SPECIAL TOPICS IN I.T</h3>
+                    <a href="#special" class="portfolio-link" data-toggle="modal">
                         <div class="caption"> </div>
                         <img src="img/quitaleg.jpg" class="img-responsive" alt="" width="250" height="250">
                     </a>
@@ -252,7 +252,7 @@
                         <div class="modal-body">
                             <h2>WEB DEVELOPMENT</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/cabin.png" class="img-responsive img-centered" alt="">
+                            <img src="img/reyes.jpg" class="img-responsive img-centered" alt="">
                             <p>FRANCIS PRIM REYES</p>
                             <ul class="list-inline item-details">
                                 <li>Date:
