--- a/index.html
+++ b/index.html
@@ -115,21 +115,30 @@
             <div class="row">
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
-                        <div class="caption"> </div>
-                        <img src="img/reyes.jpg" class="img-responsive" alt="" width="250" height="250">
+                        <div class="caption">
+                            <div class="caption-content">
+                            </div>
+                        </div>
+                        <img src="img/paloao.jpg" class="img-responsive" alt="" width="250" height="250" >
+                    </a>
+                </div>
+                <div class="col-sm-4 portfolio-item">
+                    <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                            </div>
+                        </div>
+                        <img src="img/conception.jpg" class="img-responsive" alt="" width="250" height="250" >
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
-                        <div class="caption"> </div>
-                        <img src="img/paloao.jpg" class="img-responsive" alt="" width="250" height="250">
-                    </a>
-                </div>
-                <div class="col-sm-4 portfolio-item">
-                    <a href="#portfolioModal7" class="portfolio-link" data-toggle="modal">
-                        <div class="caption"> </div>
-                        <img src="img/quitaleg.jpg" class="img-responsive" alt="" width="250" height="250">
-                    </a>
+                        <div class="caption">
+                            <div class="caption-content">
+                            </div>
+                        </div>
+                        <img src="img/ortiz.jpg" class="img-responsive" alt="" width="250" height="250"> 
+                    </a> 
                 </div>
             </div>
         </div>
@@ -238,7 +247,7 @@
     </div>
 
     <!-- Portfolio Modals -->
-    <div class="portfolio-modal modal fade" id="webdev" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
