--- a/index.html
+++ b/index.html
@@ -94,26 +94,26 @@
             </div>
             <div class="row">
                 <div class="col-sm-4 portfolio-item  text-center"> <h3>WEB DEVELOPMENT</h3>
-                    <a href="#webdev" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfoliomodal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption"> </div>
                         <img src="img/reyes.jpg" class="img-responsive" alt="" width="250" height="250">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item  text-center"> <h3>SYSTEM ARCHITECTURE</h3>
-                    <a href="#systemarchi" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfoliomodal2" class="portfolio-link" data-toggle="modal">
                         <div class="caption"> </div>
                         <img src="img/paloao.jpg" class="img-responsive" alt="" width="250" height="250">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item  text-center"> <h3>SPECIAL TOPICS IN I.T</h3>
-                    <a href="#special" class="portfolio-link" data-toggle="modal">
+                    <a href="#portfoliomodal3" class="portfolio-link" data-toggle="modal">
                         <div class="caption"> </div>
                         <img src="img/quitaleg.jpg" class="img-responsive" alt="" width="250" height="250">
                     </a>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 portfolio-item text-center"> <h3>CAPSTONE PROJECT 1</h3>
                     <a href="#portfolioModal5" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -122,7 +122,7 @@
                         <img src="img/paloao.jpg" class="img-responsive" alt="" width="250" height="250" >
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 portfolio-item  text-center"> <h3>CCNA 4</h3>
                     <a href="#portfolioModal4" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -131,7 +131,7 @@
                         <img src="img/conception.jpg" class="img-responsive" alt="" width="250" height="250" >
                     </a>
                 </div>
-                <div class="col-sm-4 portfolio-item">
+                <div class="col-sm-4 portfolio-item  text-center"> <h3>QUANTITATIVE METHODS</h3>
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
